delete unnecessary interfaces

--- a/templates/show_entries.html
+++ b/templates/show_entries.html
@@ -1,5 +1,4 @@
-{% extends "layout.html" %}
-{% block body %}
+<body>
   {% if session.logged_in %}
     <form action="{{ url_for('add_entry') }}" method=post class=add-entry>
       <dl>
@@ -18,4 +17,4 @@
     <li><em>Unbelievable.  No entries here so far</em>
   {% endfor %}
   </ul>
-{% endblock %}
+</body>
