--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
     <title>Neu Profile</title>
+<!--     <style type="text/css">
+        #show{position:absolute;display:none;left:70%;top:101%;width:300px;height:300px;background-color:white;text-align: center;}
+    </style> -->
     <meta name="description" content="">
     <meta name="author" content="">
     <!--[if lt IE 9]>
@@ -48,11 +51,8 @@
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav" id="mainNav">
                         <li class="active"><a href="#home" class="scroll-link">Home</a></li>
-                        <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
                         <li><a href="#skills" class="scroll-link">在线录音分析</a></li>
                         <li><a href="#experience" class="scroll-link">音频库展示</a></li>
-                        <li><a href="#portfolio" class="scroll-link">Portfolio</a></li>
-                        <li><a href="#contactUs" class="scroll-link">Contact Us</a></li>
                     </ul>
                 </div>
                 <!--/.navbar-collapse-->
@@ -96,59 +96,7 @@
             </div>
         </div>
     </section>
-    <section id="introText">
-        <div class="container">
-            <div class="text-center">
-            <h1>I create beautiful responsive websites, Yes I am a UX geek</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. Pellentesque elementum ultricies quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque feugiat dictum erat. Nulla vehicula condimentum purus, quis imperdiet nisl ultricies eleifend. Nulla quis rhoncus risus. Ut vel vehicula urna.</p>
-            </div>
-        </div>
-
-    </section>
     <!--About-->
-    <section id="aboutUs" class="secPad">
-        <div class="container">
-            <div class="heading text-center">
-                <!-- Heading -->
-                <h2>I am Sam, a UI Designer & developer</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-            </div>
-            <div class="row">
-                <!-- item -->
-                <div class="col-md-4 text-center tileBox">
-                   <div class="txtHead"> <i class="fa fa-desktop"></i>
-                    <h3>Responsive <span class="id-color">Design</span></h3></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium.</p>
-                </div>
-                <!-- end: -->
-
-                <!-- item -->
-                <div class="col-md-4 text-center tileBox">
-                    <div class="txtHead"><i class="fa fa-css3"></i>
-                    <h3>HTML5/CSS3 <span class="id-color">Dev</span></h3></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium.</p>
-                </div>
-                <!-- end: -->
-
-                <!-- item -->
-                <div class="col-md-4 text-center tileBox">
-                    <div class="txtHead"><i class="fa fa-lightbulb-o"></i>
-                    <h3>JavaScript <span class="id-color">jQuery</span></h3></div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium.</p>
-                </div>
-                <!-- end: -->
-            </div>
-        </div>
-    </section>
-    <!--Quote-->
-    <section id="quote" class="bg-parlex">
-        <div class="parlex-back">
-            <div class="container secPad text-center">
-				<h2>If I asked people what they wanted, they would have said ‘Faster Horses’.</h2><h3>-Henry Ford</h3>
-            </div>
-            <!--/.container-->
-        </div>
-    </section>
 
     <!--Skills-->
     <section id="skills" class="secPad white">
@@ -156,56 +104,39 @@
         <div class="heading text-center">
                 <!-- Heading -->
                 <h2>从这里开始在线分析吧！</h2>
-            </div>
-            <script src="../static/js/recorder.js"></script>
-
-            <p align="center">
-                <span style="white-space:pre">		</span><audio controls autoplay></audio></p>
-<p align="center">
+        </div>
+        <script src="../static/js/recorder.js"></script>
+        <p align="center">
+            <span style="white-space:pre"></span>
+            <audio controls autoplay></audio>
+        </p>
+        <p align="center">
 		<input type="button" value="开始录音" onclick="startRecording()"/>
-
 		<input type="button" value="停止录音" onclick="stopRecord()"/>
-
 		<input type="button" value="播放录音" onclick="playRecord()"/>
         <input type="button" value="上传录音" onclick="uploadRecord()"/>
-</p>
-<script>
-                var recorder;
-
+        </p>
+        <script>
+            var recorder;
 			var audio = document.querySelector('audio');
-
-
-
 			function startRecording() {
-
 				HZRecorder.get(function (rec) {
-
 					recorder = rec;
-
 					recorder.start();
-
 				});
-
 			}
 
 			function obtainRecord(){
-
 				var record = recorder.getBlob();
-
 				debugger;
-
 			};
 
 			function stopRecord(){
-
 				recorder.stop();
-
 			};
 
 			function playRecord(){
-
 				recorder.play(audio);
-
 			};
 
 			function uploadRecord(){
@@ -229,101 +160,60 @@
                     }
                 });
 				// alert("上传结束");
-
 			};
-
-
-
-</script>
-
-        	<div class="row">
-                <div class="col-sm-6">
-                    <h2>Programming <strong>Skills</strong></h2>
-                    <p class="mrgBtm20">
-                        It takes knowledge, smart work, and dedication to make great ideas come to life. I have been helping make great ideas happen for the past 7 years and am always ready for new challenges.
-
-                    </p>
-                    <div class="row">
-                        <div class="col-md-2 skilltitle">HTML5</div>
-                        <div class="col-md-8">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                    <span class="sr-only">90% Complete</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="row">
-                        <div class="col-md-2 skilltitle">static/CC3</div>
-                        <div class="col-md-8">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                    <span class="sr-only">90% Complete</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-2 skilltitle">JavaScript</div>
-                        <div class="col-md-8">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                                    <span class="sr-only">80% Complete</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-2 skilltitle">jQuery/Ajax</div>
-                        <div class="col-md-8">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                    <span class="sr-only">90% Complete</span>
-                                </div>
+        </script>
+        <div class="row" id = "show">
+            <div class="col-sm-6">
+                <h2>Sentiment Predicted</h2>
+                <div class="row">
+                    <div class="col-md-2 skilltitle">angry</div>
+                    <div class="col-md-8">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: {{dic.angry}}%;">
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6">
-                    <h2>Designing <strong>Skills</strong></h2>
-                    <p class="mrgBtm20">
-                        Problem solving is not always about sitting in a board room talking about the way things should be done. I have a strong background in UI design which allows me to think on my feet and act upon it.
 
-                    </p>
-                    <div class="row">
-                        <div class="col-md-2 skilltitle">Photoshop</div>
-                        <div class="col-md-8">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                    <span class="sr-only">90% Complete</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-2 skilltitle">Illustrator</div>
-                        <div class="col-md-8">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                                    <span class="sr-only">80% Complete</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-2 skilltitle">Indesign</div>
-                        <div class="col-md-8">
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">
-                                    <span class="sr-only">75% Complete</span>
-                                </div>
+
+                <div class="row">
+                    <div class="col-md-2 skilltitle">sad</div>
+                    <div class="col-md-8">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: {{dic.sad}}%;">
                             </div>
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-2 skilltitle">surprise</div>
+                    <div class="col-md-8">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: {{dic.surprise}}%;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 skilltitle">fear</div>
+                    <div class="col-md-8">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: {{dic.fear}}%;">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 skilltitle">happy</div>
+                    <div class="col-md-8">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: {{dic.happy}}%;">
+                            </div>
+                        </div>
+                    </div>
+                </div>            
             </div>
+        </div>
         </div>
     </section>
 
