--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,4 @@
-{% extends "layout.html" %}
-{% block body %}
+<body>
   <h2>Login</h2>
   {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
   <form action="{{ url_for('login') }}" method=post>
@@ -11,4 +10,4 @@
       <dd><input type=submit value=Login>
     </dl>
   </form>
-{% endblock %}
+</body>
