--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav" id="mainNav">
-                        <li class="active"><a href="/index" class="scroll-link">Home</a></li>
+                        <li><a href="/index" class="scroll-link">Home</a></li>
                         <li><a href="/get_audio" class="scroll-link">在线录音分析</a></li>
                         <li><a href="#experience" class="scroll-link">音频库展示</a></li>
                     </ul>
