--- a/templates/base.html
+++ b/templates/base.html
@@ -27,11 +27,11 @@
     <link rel="stylesheet" type="text/css" href="static/isotope.css" media="screen" />
     <link rel="stylesheet" href="static/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
     <link rel="stylesheet" type="text/css" href="static/da-slider.css" />
+    <script src="static/js/recorder.js"></script>
+
     <!-- Owl Carousel Assets -->
     <link href="static/js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link rel="stylesheet" href="static/styles.css" />
-    <!-- Font Awesome -->
-    <link href="static/font/static/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -99,8 +99,6 @@
     <script src="static/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
     <script src="static/js/jquery.nav.js" type="text/javascript"></script>
     <script src="static/js/jquery.cslider.js" type="text/javascript"></script>
- <script src="contact/jqBootstrapValidation.js"></script>
- <script src="contact/contact_me.js"></script>
 
     <script src="static/js/custom.js" type="text/javascript"></script>
     <script src="static/js/owl-carousel/owl.carousel.js"></script>
