--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
     <title>Neu Profile</title>
-<!--     <style type="text/css">
-        #show{position:absolute;display:none;left:70%;top:101%;width:300px;height:300px;background-color:white;text-align: center;}
-    </style> -->
     <meta name="description" content="">
     <meta name="author" content="">
     <!--[if lt IE 9]>
@@ -52,7 +49,7 @@
                     <ul class="nav navbar-nav" id="mainNav">
                         <li><a href="/index" class="scroll-link">Home</a></li>
                         <li><a href="/get_audio" class="scroll-link">在线录音分析</a></li>
-                        <li><a href="#experience" class="scroll-link">音频库展示</a></li>
+                        <li><a href="/show_demo" class="scroll-link">音频库展示</a></li>
                     </ul>
                 </div>
                 <!--/.navbar-collapse-->
@@ -64,20 +61,6 @@
     <!--/.header-->
     <div id="#top"></div>
 	{% block content %}{% endblock %}
-    <footer>
-        <div class="container">
-            <div class="social text-center">
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
-                <a href="#"><i class="fa fa-flickr"></i></a>
-                <a href="#"><i class="fa fa-github"></i></a>
-            </div>
-
-            <div class="clear"></div>
-            <!--CLEAR FLOATS-->
-        </div>
-    </footer>
     <!--/.page-section-->
     <section class="copyright">
         <div class="container">
