--- a/templates/get_audio.html
+++ b/templates/get_audio.html
@@ -70,12 +70,12 @@
 	<div class="row" id = "show">
 		<div class="col-sm-6">
 			<h2>Sentiment Predicted</h2>
-            {% for emoName in dic %}
+            {% for emoName,emoPos in dic.items() %}
 			<div class="row">
 				<div class="col-md-2 skilltitle">{{ emoName|title }}</div>
 				<div class="col-md-8">
-					<div class="progress">
-						<div class="progress-bar" role="progressbar" aria-valuenow="{{ dic[emoName]*100 }}" aria-valuemin="0" aria-valuemax="100" style="width: {{dic.angry}}%;">
+					<div class="progress" lay-showPercent="yes">
+						<div class="progress-bar" role="progressbar" aria-valuenow="{{ dic[emoName]*100 }}" aria-valuemin="0" aria-valuemax="100" style="width: {{dic.emoName * 100}}%;">
 						</div>
 					</div>
 				</div>
