--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
                         <li><a href="/index" class="scroll-link">Home</a></li>
                         <li><a href="/get_audio" class="scroll-link">在线录音分析</a></li>
                         <li><a href="/show_demo" class="scroll-link">音频库展示</a></li>
+                        <li><a href="/emo_visual" class="scroll-link">历史情绪变化</a></li>
                     </ul>
                 </div>
                 <!--/.navbar-collapse-->
