--- a/templates/index.html
+++ b/templates/index.html
@@ -5,23 +5,23 @@
 		<div class="container banner-content">
 			<div id="da-slider" class="da-slider">
 				<div class="da-slide">
-					<h2>Webdesigner</h2>
-					<p>Amazing free responsive website for free, enjoy!!!</p>
+					<h2>在线情感分析</h2>
+					<p>助你洞悉情感O(∩_∩)O~</p>
 					<div class="da-img"></div>
 				</div>
 				<div class="da-slide">
-					<h2>UX/UI Developer</h2>
-					<p>I develop website using Bootstrap front-end framework..</p>
+					<h2>即时展示结果</h2>
+					<p>终于知道女朋友到底生没生气啦!!!</p>
+					<div class="da-img"></div>
+				</div>
+                <div class="da-slide">
+					<h2>典型案例展示</h2>
+					<p>原来机智的人是这样说话的哦</p>
 					<div class="da-img"></div>
 				</div>
 				<div class="da-slide">
-					<h2>HTML5/CSS3</h2>
-					<p>HTML5 is a markup language used for structuring and presenting Web.</p>
-					<div class="da-img"></div>
-				</div>
-				<div class="da-slide">
-					<h2>JavaScript/jQuery</h2>
-					<p>jQuery: Write Less, Do More...</p>
+					<h2>情感波动监测</h2>
+					<p>世界如此美妙，你可不要暴躁~</p>
 					<div class="da-img"></div>
 				</div>
 			<!--  <nav class="da-arrows">
