Add emotional-neutral support.

--- a/templates/show_demo.html
+++ b/templates/show_demo.html
@@ -16,9 +16,9 @@
 					<input type="file" id="file_{{j}}" onchange="getResults({{j}})">
                     <audio id="audio_id_{{j}}" controls="controls">
                         Your browser can't support HTML5 Audio</audio>
-{#                    <p align="center">#}
-{#                        <button onclick="getResults({{j}})">获取结果</button>#}
-{#                    </p>#}
+                    <p align="center">
+                        <button onclick="getResults({{j}})">获取结果</button>
+                    </p>
 				</div>
 			</div>
 		</div>
