--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <!--[if IE 8 ]>    <html lang="en-gb" class="isie ie8 oldie no-js"> <![endif]-->
 <!--[if IE 9 ]>    <html lang="en-gb" class="isie ie9 no-js"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
-<html lang="en-gb" class="no-js">
+<html lang="en-gb" class="no-js" style="height: 100%">
 <!--<![endif]-->
 <head>
     <meta charset="utf-8">
@@ -25,13 +25,13 @@
     <link rel="stylesheet" href="static/js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
     <link rel="stylesheet" type="text/css" href="static/da-slider.css" />
     <script src="static/js/recorder.js"></script>
-
+	<script src="static/js/echarts.js"></script>
     <!-- Owl Carousel Assets -->
     <link href="static/js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link rel="stylesheet" href="static/styles.css" />
 </head>
 
-<body>
+<body style="height: 100%; margin: 0">
     <header class="header">
         <div class="container">
             <nav class="navbar navbar-inverse" role="navigation">
