--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-    <title>Neu Profile</title>
+    <title>在线音频情感分析</title>
     <meta name="description" content="">
     <meta name="author" content="">
     <!--[if lt IE 9]>
@@ -29,8 +29,9 @@
     <!-- Owl Carousel Assets -->
     <link href="static/js/owl-carousel/owl.carousel.css" rel="stylesheet">
     <link rel="stylesheet" href="static/styles.css" />
+    {% block head %}{% endblock %}
 </head>
-
+{% block style %}{% endblock %}
 <body style="height: 100%; margin: 0">
     <header class="header">
         <div class="container">
@@ -42,12 +43,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#" class="navbar-brand scroll-top logo"><b>Neu Profile</b></a>
+                    <a href="#" class="navbar-brand scroll-top logo"><b>在线音频情感分析</b></a>
                 </div>
                 <!--/.navbar-header-->
                 <div id="main-nav" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav" id="mainNav">
-                        <li><a href="/index" class="scroll-link">Home</a></li>
+                        <li><a href="/index" class="scroll-link">主页</a></li>
                         <li><a href="/get_audio" class="scroll-link">在线录音分析</a></li>
                         <li><a href="/show_demo" class="scroll-link">音频库展示</a></li>
                         <li><a href="/emo_visual" class="scroll-link">历史情绪变化</a></li>
